# PR-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/core/: commands.py  reviewer.py
app/github/: auth.py  client.py  webhook.py
app/llm/: openai_client.py  prompt.py
config/: defaults.yaml
docs/: CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT_INSTRUCTIONS.md  GUARDRAILS.md  LOCAL_DEVELOPMENT.md  README.md  SECURITY.md
pr_agent/: __init__.py  config.py  main.py
pr_agent/mcp/: client.py  github_tools.py  stdio_client.py
pr_agent/review/: diff_chunker.py  diff_stats.py  formatter.py  line_suggestions.py
pr_agent/summarizer/: __init__.py  file_processor.py  foundry_client.py  parser.py  prompts.py
pr_agent/utils/: file_filters.py  placeholder.py  redaction.py  review_state.py
pr_agent/web/: app.py
pr_agent/web/static/: scripts.js  styles.css
pr_agent/web/templates/: base.html  branches.html  comments.html  commits.html  index.html  issues.html  merges.html  pr_detail.html  prs.html  workflows.html
scripts/: run_local.sh  test_foundry_real_pr.py  test_foundry_summary.py
tests/: test_github_tools.py  test_review_state.py
vibe-context/: AGENTS.md
